# cmake-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Config.cmake  ExternalsUtils.cmake  GlobalConfig.cmake  Globals.cmake  Options.cmake  SymlinkContent.cmake  Utils.cmake
cmake/dependencies/: example_library.cmake  fmt.cmake  tracy.cmake
cmake/presets/: base.json  clang.json
cmake/presets/configs/: dev.json  profile.json  shipping.json
cmake/presets/toolchains/: clang.json  emscripten.json  msvc.json
cmake/presets/toolchains/linux/: Clang.toolchain.cmake
cmake/presets/toolchains/windows/: Windows.Clang.toolchain.cmake  Windows.MSVC.toolchain.cmake
src/: CMakeLists.txt  main.c  main.cpp
